feat: hyprland and rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,8 @@ monitor=eDP-1,1920x1200@60,auto,1
 
 # Set programs that you use
 $terminal = kitty
-$menu = wofi --show run
+$menu = rofi -show run -theme nord.rasi
+$switcher = rofi -show window -theme nord.rasi
 
 # Some default env vars.
 env = XCURSOR_SIZE,16
@@ -158,6 +159,7 @@ bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, f, fullscreen, 0 
 bind = $mainMod, m, togglefloating, 
 bind = $mainMod, Space, exec, $menu
+bind = $mainMod, n, exec, $switcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, v, togglesplit, # dwindle
 
