add authentication agent to hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -267,7 +267,7 @@ bind = $mainMod SHIFT, A, movetoworkspace, special:A
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = hyprpaper
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
