add dunst config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -269,6 +269,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = hyprpaper
+exec-once = dunst
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -281,3 +282,5 @@ bind = $mainMod SHIFT, Print, exec, $screenshort s
 bind = $mainMod CTRL, Print, exec, $screenshort w
 bind = $mainMod SHIFT, backslash, exec, /home/defalse/.Null/Devs/myScripts/hyprexit.sh
 bind = $mainMod, b, exec, killall waybar || waybar
+
+source = ~/.config/hypr/zenbook.conf
