add layerrule for rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -141,6 +141,8 @@ windowrulev2 = stayfocused, class:(steam)
 # windowrulev2 = minsize 1 1, class:(steam)
 windowrulev2 = float, class:(org.kde.polkit-kde-authentication-agent-1)
 
+layerrule = noanim, rofi
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
