--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -135,9 +135,9 @@ device {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = float, class:(steam)
-windowrulev2 = tile, class:(steam), title:(Steam)
-windowrulev2 = stayfocused, class:(steam)
+# windowrulev2 = float, class:(steam)
+# windowrulev2 = tile, class:(steam), title:(Steam)
+# windowrulev2 = stayfocused, class:(steam)
 # windowrulev2 = minsize 1 1, class:(steam)
 windowrulev2 = float, class:(org.kde.polkit-kde-authentication-agent-1)
 
