--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -129,6 +129,10 @@ device {
     sensitivity = -0.5
 }
 
+cursor {
+	no_warps = true
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -256,6 +260,9 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 bind = $mainMod, A, togglespecialworkspace, A
 bind = $mainMod SHIFT, A, movetoworkspace, special:A
+
+# neat
+bind = $mainMod, semicolon, pin, activewindow
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
