feat: add switcher to rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,8 +14,8 @@ monitor=eDP-1,1920x1200@60,auto,1
 # Set programs that you use
 $terminal = kitty
 $menu = rofi -show run -theme nord.rasi
-$switcher = rofi -show window -theme nord.rasi
-
+# $switcher = rofi -show window -theme nord.rasi
+$switcher = hyprctl clients | awk '/title: ./ { gsub("\t*title: *", ""); print}' | rofi -dmenu -theme nord.rasi | xargs -I{} hyprctl dispatch focuswindow "title:{}"
 # Some default env vars.
 env = XCURSOR_SIZE,16
 env = QT_QPA_PLATFORMTHEME,qt5ct
