fix: mic toggle source change name

--- a/.config/hypr/zenbook.conf
+++ b/.config/hypr/zenbook.conf
@@ -3,4 +3,4 @@ bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
 bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
-bind = , XF86AudioMicMute, exec, pamixer --source $(pamixer --list-sources | awk '/acp/ {print $1}') -t
+bind = , XF86AudioMicMute, exec, pamixer --source $(pamixer --list-sources | awk '/Digital/ {print $1}') -t
