--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -19,20 +19,20 @@ background {
 
 input-field {
     monitor =
-    size = 400, 50
+    size = 400, 40
     outline_thickness = 3
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
     outer_color = rgb(151515)
-    inner_color = rgb(255, 255, 255)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
+    inner_color = rgb(151515)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = ... # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
+    placeholder_text = empty # Text rendered in the input box when it's empty.
+    hide_input = true
+    rounding = 0 # -1 means complete rounding (circle/oval)
     check_color = rgb(204, 136, 34)
     fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
