--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,highres,auto,1
 monitor=eDP-1,1920x1200@60,auto,1
+monitor=eDP-2,1920x1200@60,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
