feat: change default terminal to ghostty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=eDP-2,1920x1200@60,auto,1
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $menu = rofi -show run -theme nord.rasi
 # $switcher = rofi -show window -theme nord.rasi
 $switcher = hyprctl clients | awk '/title: ./ { gsub("\t*title: *", ""); print}' | rofi -dmenu -theme nord.rasi | xargs -I{} hyprctl dispatch focuswindow "title:{}"
