--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,22 +8,28 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # catppuccin
 set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_text_color "#{@thm_surface_0}"
+set -g @catppuccin_window_number_color "#{@thm_overlay_2}"
+set -g @catppuccin_window_text " #T"
+set -g @catppuccin_window_number "#I"
 
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text_color "#{@thm_blue}"
+set -g @catppuccin_window_current_number_color "#{@thm_blue}"
+set -g @catppuccin_window_current_text " #T"
+set -g @catppuccin_window_current_number "#I"
 
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W"
+set -g status-left ""
 
-set -g @catppuccin_status_modules_right "directory session date_time"
+set -g status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
+set -g status-right-length 100
+
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 
-set -g @catppuccin_date_time_text "%Y,%b %d"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_date_time_text " %Y,%b %d"
+set -g @catppuccin_directory_text " #{b:pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
