style(tmux): change window text to pane command

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,13 +10,11 @@ set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_window_text_color "#{@thm_surface_0}"
 set -g @catppuccin_window_number_color "#{@thm_overlay_2}"
-set -g @catppuccin_window_text " #T"
-set -g @catppuccin_window_number "#I"
+set -g @catppuccin_window_text " #{pane_current_command}"
 
 set -g @catppuccin_window_current_text_color "#{@thm_blue}"
 set -g @catppuccin_window_current_number_color "#{@thm_blue}"
-set -g @catppuccin_window_current_text " #T"
-set -g @catppuccin_window_current_number "#I"
+set -g @catppuccin_window_current_text " #{pane_current_command}"
 
 set -g status-left ""
 
