--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
 set -g mouse on
-set-option -sa terminal-features ',alacritty:RGB'
+
+# Enable true-color support
+set -g terminal-overrides ',xterm-256color:Tc'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -32,11 +34,11 @@ set -g @catppuccin_directory_text " #{b:pane_current_path}"
 ## End theme
 
 # Keymap
-bind C-d display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+bind C-d display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "ranger"
 bind C-s display-popup -d "#{pane_current_path}" -w 80% -h 80% -E ${SHELL}
 bind C-k display-popup -w 80% -h 80% -E "tmux list-keys | fzf"
 bind C-e display-popup -w 80% -h 80% -E "deno repl || node"
-bind C-g display-popup -w 80% -h 80% -E "lazygit"
+bind C-g display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
 ##
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
