chore: move color to valriable

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -20,7 +20,15 @@ $switcher = hyprctl clients | awk '/title: ./ { gsub("\t*title: *", ""); print}'
 # Some default env vars.
 env = XCURSOR_SIZE,16
 env = QT_QPA_PLATFORMTHEME,qt5ct
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 # env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+
+$color_a1 = rgba(33ccffff)
+$color_a2 = rgba(00ff99ff)
+$color_i1 = rgba(595959ff)
+$color_shadow = rgba(1a1a1aee)
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -58,8 +66,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
-    col.inactive_border = rgba(595959ff)
+    col.active_border = $color_a1 $color_a2 45deg
+    col.inactive_border = $color_i1
 
     layout = dwindle
 
@@ -80,7 +88,7 @@ decoration {
 
 	shadow {
 		enabled = false
-		color = rgba(1a1a1aee)
+		color = $color_shadow
 	}
 }
 
@@ -121,6 +129,20 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 	disable_hyprland_logo = true
+	font_family = FiraCode Nerd Font Mono 
+}
+
+group {
+	drag_into_group = 2
+
+	col.border_active = $color_a1 $color_a2 45deg
+	col.border_inactive = $color_i1
+
+	groupbar {
+		indicator_height = 4
+		col.active = $color_a2
+		col.inactive = $color_i1
+	}
 }
 
 # Example per-device config
@@ -147,6 +169,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:(org.kde.polkit-kde-authentication-agent-1)
 
 layerrule = noanim, rofi
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -269,7 +292,10 @@ bind = $mainMod, semicolon, pin, activewindow
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# Grouped
+bind = $mainMod, G, togglegroup
+
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper
 exec-once = dunst
 
