--- a/ghossty/.config/ghostty/config
+++ b/ghossty/.config/ghostty/config
@@ -2,4 +2,4 @@ window-decoration=false
 theme=Catppuccin Mocha
 window-padding-x=8
 window-padding-y=8
-font-family=FiraCode Nerd Font Mono
+font-family=FiraCode Nerd Font Mono,Noto Sans Thai
