--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,8 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,highres,auto,1
-monitor=eDP-1,1920x1200@60,auto,1
-monitor=eDP-2,1920x1200@60,auto,1
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -124,7 +121,7 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 	disable_hyprland_logo = true
-	font_family = FiraCode Nerd Font Mono 
+	font_family = FiraCode Nerd Font Mono, Noto Sans Thai
 }
 
 group {
