feat(tmux): add keymap for display popup

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,6 +5,7 @@ set-option -sa terminal-features ',alacritty:RGB'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# Theme
 # catppuccin
 set -g @plugin 'catppuccin/tmux'
 
@@ -28,6 +29,14 @@ set -g @catppuccin_status_right_separator "█"
 
 set -g @catppuccin_date_time_text " %Y,%b %d"
 set -g @catppuccin_directory_text " #{b:pane_current_path}"
+## End theme
+
+# Keymap
+bind C-d display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+bind C-e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E ${SHELL}
+bind C-k display-popup -w 80% -h 80% -E "tmux list-keys | fzf"
+bind C-s display-popup -w 80% -h 80% -E "deno repl || node"
+##
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
