--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,6 +36,7 @@ bind C-d display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
 bind C-e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E ${SHELL}
 bind C-k display-popup -w 80% -h 80% -E "tmux list-keys | fzf"
 bind C-s display-popup -w 80% -h 80% -E "deno repl || node"
+bind C-g display-popup -w 80% -h 80% -E "lazygit"
 ##
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
