chore: add kdlfmt, change wallpaper location

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
 ipc = off
 
-preload = ~/Pictures/pexels-rakicevic-nenad-753994.jpg
-wallpaper = ,~/Pictures/pexels-rakicevic-nenad-753994.jpg
+preload = ~/Pictures/bg.jpg
+wallpaper = ,~/Pictures/bg.jpg
