chore: update config for hyprland 53 and change tmux keymap

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -160,7 +160,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # windowrulev2 = minsize 1 1, class:(steam)
 windowrulev2 = float, class:(org.kde.polkit-kde-authentication-agent-1)
 
-layerrule = noanim, rofi
+layerrule = match:title rofi, no_anim on
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
