--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -33,9 +33,9 @@ set -g @catppuccin_directory_text " #{b:pane_current_path}"
 
 # Keymap
 bind C-d display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
-bind C-e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E ${SHELL}
+bind C-s display-popup -d "#{pane_current_path}" -w 80% -h 80% -E ${SHELL}
 bind C-k display-popup -w 80% -h 80% -E "tmux list-keys | fzf"
-bind C-s display-popup -w 80% -h 80% -E "deno repl || node"
+bind C-e display-popup -w 80% -h 80% -E "deno repl || node"
 bind C-g display-popup -w 80% -h 80% -E "lazygit"
 ##
 
