chore: update hyprland exit command

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -300,7 +300,7 @@ $screenshort = /home/defalse/.Null/Devs/myScripts/screenshot.sh
 bind = $mainMod, Print, exec, $screenshort d
 bind = $mainMod SHIFT, Print, exec, $screenshort s
 bind = $mainMod CTRL, Print, exec, $screenshort w
-bind = $mainMod SHIFT, backslash, exec, /home/defalse/.Null/Devs/myScripts/hyprexit.sh
+bind = $mainMod SHIFT, backslash, exit
 bind = $mainMod, b, exec, killall waybar || waybar
 
 source = ~/.config/hypr/zenbook.conf
